<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createEventWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="Create Event"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:hint="Title"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/eventLocation"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp"
                android:hint="Location"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="27sp"
                app:layout_constraintBottom_toTopOf="@+id/eventDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventTitle" />

            <EditText
                android:id="@+id/eventDescription"
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp"
                android:hint="Description"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="27sp"
                app:layout_constraintBottom_toTopOf="@+id/eventDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventTitle" />

            <CalendarView
                android:id="@+id/eventDate"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/createEventButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/createEventButton"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_marginBottom="8dp"
                android:background="#0AA2CB"
                android:onClick="createEvent"
                android:text="Create Event"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>