<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    tools:context=".GroupChatActivity">

    <include
        android:id="@+id/chat_app_bar"
        layout="@layout/app_bar_layout" />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/messages_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chat_app_bar"></android.support.v7.widget.RecyclerView>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/chat_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/white"
            android:padding="10dp"
            app:srcCompat="@android:drawable/ic_input_add" />

        <EditText
            android:id="@+id/chat_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="Enter Message..."
            android:inputType="textPersonName"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="14dp" />

        <Button
            android:id="@+id/chat_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="#139edf"
            android:padding="10dp"
            android:text="@string/Send"
            android:textSize="22dp" />
    </LinearLayout>


</RelativeLayout>