<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="400dp"
    android:layout_height="560dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/editTextDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="Oldivity"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:fontFamily="cursive" />

    <AutoCompleteTextView
        android:id="@+id/Email"
        android:layout_width="312dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="213dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="40sp" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="177dp"
        android:layout_height="88dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:background="#0AA2CB"
        android:onClick="SignIN"
        android:text="Log In"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/editTextDisplayName"
        android:layout_toRightOf="@+id/buttonSignIn"
        android:background="#0AA2CB"
        android:onClick="SignUP"
        android:text="Sign Up"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSignUp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:text="Not a member yet?"
        android:textSize="20sp" />

</RelativeLayout>